--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
     aperiam quasi harum veritatis nesciunt eos omnis, voluptates deserunt dolorem amet optio, accusamus laborum dicta?
     Repellat, veritatis!
   </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, est!
+  </p>
   <script src="js/scripts.js"></script>
 </body>
 
