--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, est!
   </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, est!
+  </p>
   <script src="js/scripts.js"></script>
 </body>
 
